--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -215,11 +215,11 @@
     <string name="generate_password_hint">Пароль кошелька</string>
     <string name="generate_fingerprint_hint">Разрешить открыть кошелек при помощи отпечатка пальца</string>
     <string name="generate_fingerprint_warn"><![CDATA[
-        <strong>Аутентификация ро отпечаткам пальцев</strong>
+        <strong>Аутентификация по отпечаткам пальцев</strong>
         <p>С поддержкой аутентификации по отпечаткам пальцев, вы можете просматривать баланс и получать средства
         без ввода пароля.</p>
         <p>Но для дополнительной безопасности, monerujo потребует от вас ввести пароль при
-        просмотр деталей кошелька или отправке средств.</p>
+        просмотре деталей кошелька или отправке средств.</p>
         <strong>Предупреждение системы безопасности</strong>
         <p>monerujo хочет напомнить вам, что любой, кто может получить ваш отпечаток пальца, будет
         обладать возможностью, заглянуть в баланс вашего кошелька.</p>
