now can write view/spend key and seed to NFC with NFC default key

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -331,5 +331,5 @@
     <string name="fab_restore_key">Restore wallet from private keys</string>
     <string name="fab_restore_seed">Restore wallet 25 word seed</string>
     <string name="menu_backup_to_file">Backup To File</string>
-    <string name="input_nfc_password_title">Input NFC Password Then Tap</string>
+    <string name="input_nfc_password_title">Input Wallet Password Then Tap</string>
 </resources>
