--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -134,8 +134,10 @@
     <string name="prompt_password">Mot de passe pour %1$s</string>
     <string name="prompt_fingerprint_auth">Vous pouvez également ouvrir le portefeuille avec votre empreinte digitale.\nMerci de toucher le capteur.</string>
     <string name="prompt_send_password">Confirmez le mot de passe</string>
+    <string name="prompt_open_wallet">[Opening the wallet&#8230;]</string>
     <string name="bad_fingerprint">Empreinte digitale non reconnue. Résessayez.</string>
     <string name="bad_password">Mot de passe incorrect !</string>
+    <string name="bad_saved_password">[Saved password is incorrect.\nPlease enter password manually.]</string>
     <string name="bad_wallet">Portefeuille inexistant !</string>
     <string name="prompt_daemon_missing">L\'adresse du démon ne peut pas être configurée !</string>
     <string name="prompt_wrong_net">Portefeuille incompatible avec le réseau sélectionné</string>
