--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -131,8 +131,10 @@
     <string name="prompt_password">Passord for %1$s</string>
     <string name="prompt_fingerprint_auth">[You can also open wallet using fingerprint.\nPlease touch sensor.]</string>
     <string name="prompt_send_password">Bekreft passord</string>
+    <string name="prompt_open_wallet">[Opening the wallet&#8230;]</string>
     <string name="bad_fingerprint">[Fingerprint not recognized. Try again.]</string>
     <string name="bad_password">Feil passord!</string>
+    <string name="bad_saved_password">[Saved password is incorrect.\nPlease enter password manually.]</string>
     <string name="bad_wallet">Lommebok eksisterer ikke!</string>
     <string name="prompt_daemon_missing">Daemon-adresse må være gitt!</string>
     <string name="prompt_wrong_net">Lommebok matcher ikke valgt nett</string>
