--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -132,8 +132,10 @@
     <string name="prompt_password">%1$s 的密码</string>
     <string name="prompt_fingerprint_auth">你也可以使用指纹来开启钱包。\n请轻触你的指纹感应器。</string>
     <string name="prompt_send_password">确认密码</string>
+    <string name="prompt_open_wallet">[Opening the wallet&#8230;]</string>
     <string name="bad_fingerprint">无法识别指纹，请再试一次。</string>
     <string name="bad_password">密码错误!</string>
+    <string name="bad_saved_password">[Saved password is incorrect.\nPlease enter password manually.]</string>
     <string name="bad_wallet">钱包不存在!</string>
     <string name="prompt_daemon_missing">必需要设定节点位置!</string>
     <string name="prompt_wrong_net">钱包不符合选择的网络</string>
