--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -307,4 +307,12 @@
     <string name="fab_restore_viewonly">View Only Wallet wiederherstellen</string>
     <string name="fab_restore_key">Wallet mit privaten Schlüsseln wiederherstellen</string>
     <string name="fab_restore_seed">Wallet mit 25 Wörter Seed wiederherstellen</string>
+
+    <string name="accounts_drawer_open">Open Accounts Drawer</string>
+    <string name="accounts_drawer_close">Close Accounts Drawer</string>
+    <string name="accounts_drawer_new">Create Account</string>
+    <string name="accounts_drawer_title">Accounts</string>
+    <string name="accounts_balance">%1$s XMR</string>
+    <string name="accounts_new">Added new account #%1$d</string>
+    <string name="tx_account">Account #</string>
 </resources>
