--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -310,4 +310,12 @@
     <string name="fab_restore_viewonly">Restaurer un portefeuille d\'audit</string>
     <string name="fab_restore_key">Restaurer un portefeuille depuis la clef privée</string>
     <string name="fab_restore_seed">Restaurer un portefeuille depuis la phrase mnémonique</string>
+
+    <string name="accounts_drawer_open">Open Accounts Drawer</string>
+    <string name="accounts_drawer_close">Close Accounts Drawer</string>
+    <string name="accounts_drawer_new">Create Account</string>
+    <string name="accounts_drawer_title">Accounts</string>
+    <string name="accounts_balance">%1$s XMR</string>
+    <string name="accounts_new">Added new account #%1$d</string>
+    <string name="tx_account">Account #</string>
 </resources>
