--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -306,4 +306,12 @@
     <string name="fab_restore_viewonly">Gjenoprett bare-se lommebok</string>
     <string name="fab_restore_key">Gjenoprett lommebok fra private nøkler</string>
     <string name="fab_restore_seed">Gjenoprett lommebok fra 25-ord seed</string>
+
+    <string name="accounts_drawer_open">Open Accounts Drawer</string>
+    <string name="accounts_drawer_close">Close Accounts Drawer</string>
+    <string name="accounts_drawer_new">Create Account</string>
+    <string name="accounts_drawer_title">Accounts</string>
+    <string name="accounts_balance">%1$s XMR</string>
+    <string name="accounts_new">Added new account #%1$d</string>
+    <string name="tx_account">Account #</string>
 </resources>
