--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -256,12 +256,16 @@
 
     <string name="send_create_tx_error_title">Create Transaction Error</string>
 
+    <string name="accounts_balance">%1$s XMR</string>
+    <string name="accounts_new">Added new account #%1$d</string>
+
     <string name="tx_list_fee">- Fee %1$s</string>
     <string name="tx_list_amount_failed">(%1$s)</string>
     <string name="tx_list_failed_text">failed</string>
     <string name="tx_list_amount_negative">- %1$s</string>
     <string name="tx_list_amount_positive">+ %1$s</string>
 
+    <string name="tx_account">Account #</string>
     <string name="tx_timestamp">Timestamp</string>
     <string name="tx_id">TX ID</string>
     <string name="tx_key">TX Key</string>
@@ -358,4 +362,10 @@
     <string name="fab_restore_viewonly">Restore view-only wallet</string>
     <string name="fab_restore_key">Restore wallet from private keys</string>
     <string name="fab_restore_seed">Restore wallet 25 word seed</string>
+
+    <string name="accounts_drawer_open">Open Accounts Drawer</string>
+    <string name="accounts_drawer_close">Close Accounts Drawer</string>
+    <string name="accounts_drawer_new">Create Account</string>
+    <string name="accounts_drawer_title">Accounts</string>
+
 </resources>
