--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -261,7 +261,8 @@
 
     <string name="send_sweepall">Send all confirmed funds in this account!</string>
 
-    <string name="accounts_balance">%1$s XMR</string>
+    <string name="accounts_balance" translatable="false">%1$s XMR</string>
+
     <string name="accounts_new">Added new account #%1$d</string>
 
     <string name="tx_list_fee">- Fee %1$s</string>
