--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -258,7 +258,7 @@
 
     <string name="send_create_tx_error_title">Create Transaction Error</string>
 
-    <string name="accounts_balance">%1$s XMR</string>
+    <string name="accounts_balance" translatable="false">%1$s XMR</string>
     <string name="accounts_new">Added new account #%1$d</string>
 
     <string name="tx_list_fee">- Fee %1$s</string>
