--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -237,7 +237,7 @@
     <string name="send_address_title">Adresse</string>
     <string name="send_amount_title">Betrag</string>
     <string name="send_settings_title">Optionen</string>
-    <string name="send_confirm_title">Annehmen</string>
+    <string name="send_confirm_title">Gebühr</string>
     <string name="send_success_title">Fertig</string>
 
     <string name="send_amount_label">Betrag</string>
