--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -320,5 +320,5 @@
     <string name="accounts_balance">%1$s XMR</string>
     <string name="accounts_new">Nouveau Compte #%1$d ajouté</string>
     <string name="tx_account">Compte #</string>
-    <string name="send_sweepall">Send all funds in this account!</string>
+    <string name="send_sweepall">Send all confirmed funds in this account!</string>
 </resources>
