--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -318,5 +318,5 @@
     <string name="accounts_balance">%1$s XMR</string>
     <string name="accounts_new">Added new account #%1$d</string>
     <string name="tx_account">Account #</string>
-    <string name="send_sweepall">Send all funds in this account!</string>
+    <string name="send_sweepall">Send all confirmed funds in this account!</string>
 </resources>
