--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,6 +216,7 @@
     <string name="generate_mnemonic_hint">25-Word Mnemonic Seed</string>
     <string name="generate_restoreheight_hint">Restore Height or Date (YYYY-MM-DD)</string>
 
+    <string name="generate_address_label_sub">Public Subaddress #%1$d</string>
     <string name="generate_address_label">Public Address</string>
     <string name="generate_viewkey_label">View Key</string>
     <string name="generate_spendkey_label">Spend Key</string>
@@ -365,4 +366,6 @@
     <string name="accounts_drawer_new">Create Account</string>
     <string name="accounts_drawer_title">Accounts</string>
 
+    <string name="tx_subaddress">Subaddress #%1$d</string>
+    <string name="tx_account_formatted" translatable="false">(%1$d, %2$d)</string>
 </resources>
