--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -80,10 +80,10 @@
     <string name="prompt_password">Contraseña para %1$s</string>
     <string name="prompt_fingerprint_auth">Puedes poner tu dedo en el sensor para autorizar con tu huella.</string>
     <string name="prompt_send_password">Confirmar Contraseña</string>
-    <string name="prompt_open_wallet">[Opening the wallet&#8230;]</string>
+    <string name="prompt_open_wallet">[Abriendo el monedero&#8230;]</string>
     <string name="bad_fingerprint">Huella no reconocida. Inténtalo nuevamente.</string>
     <string name="bad_password">¡Contraseña incorrecta!</string>
-    <string name="bad_saved_password">[Saved password is incorrect.\nPlease enter password manually.]</string>
+    <string name="bad_saved_password">[La contraseña guardada es incorrecta.\nPor favor ingresela manualmente.]</string>
     <string name="bad_wallet">¡El monedero no existe!</string>
     <string name="prompt_daemon_missing">¡La dirección del daemon debe estar configurada!</string>
     <string name="prompt_wrong_net">El monedero no coincide con la red seleccionada</string>
@@ -297,8 +297,8 @@
 
     <string name="accounts_drawer_open">Open Accounts Drawer</string>
     <string name="accounts_drawer_close">Close Accounts Drawer</string>
-    <string name="accounts_drawer_new">Create Account</string>
-    <string name="accounts_drawer_title">Accounts</string>
-    <string name="accounts_new">Added new account #%1$d</string>
-    <string name="tx_account">Account #</string>
+    <string name="accounts_drawer_new">Crear Cuenta</string>
+    <string name="accounts_drawer_title">Cuentas</string>
+    <string name="accounts_new">Nueva cuenta agregada #%1$d</string>
+    <string name="tx_account"># de cuenta</string>
 </resources>
